add swagger and validate for get product by id
